--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1> <span class="orange-color"> Chowdhury Fahad's </span> World!!</h1>
@@ -29,7 +29,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -41,6 +41,30 @@
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2024-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I konw everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nostrum ratione consequuntur iusto
+                    eaque
+                    recusandae distinctio numquam architecto dolorum temporibus! Ad placeat eaque, rerum unde esse
+                    aspernatur saepe dignissimos quia?</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>©Peter Parker 2022. A Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
